add history andpoint and tests
